--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,5 @@ j2ee.server.home=/home/mark/apache-tomcat-8.0.27
 j2ee.server.instance=tomcat80:home=/home/mark/apache-tomcat-8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=Chrome.INTEGRATED
 user.properties.file=/home/mark/.netbeans/8.2/build.properties
