--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${file.reference.jsp-api-2.0.jar}:\
-    ${file.reference.jstl-1.2.jar}
+    ${file.reference.jstl-1.2.jar}:\
+    ${libs.javaee-web-api-7.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
