--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -29,8 +29,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.jsp-api-2.0.jar=web/WEB-INF/jsp-api-2.0.jar
-file.reference.jstl-1.2.jar=web/WEB-INF/jstl-1.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,10 +38,7 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.jsf20.classpath}:\
-    ${file.reference.jsp-api-2.0.jar}:\
-    ${file.reference.jstl-1.2.jar}:\
-    ${libs.javaee-web-api-7.0.classpath}
+    ${libs.jsf20.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -70,6 +65,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -85,6 +81,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=ScratchProject.war
+war.name=Scratch.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
